new folder structure

--- a/Módulo2-Desafio1/pages/contato.html
+++ b/Módulo2-Desafio1/pages/contato.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Pets</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="menu">
             <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="sobre.html">Sobre a clínica</a></li>
-                <li><a href="atendimento.html">Horário de Atendimento</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="../index.html">Página Inicial</a></li>
+                <li><a href="../pages/sobre.html">Sobre a clínica</a></li>
+                <li><a href="../pages/atendimento.html">Horário de Atendimento</a></li>
+                <li><a href="../pages/contato.html">Contato</a></li>
             </ul>
         </div>
 
         <div class="main">
-            <div class="headeratendimento">
+            <div class="headercontato">
             </div>
             <div class="contentform">
                 <h1>Entre em Contato</h1>
