--- a/Módulo2-Desafio1/index.html
+++ b/Módulo2-Desafio1/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="menu">
             <ul>
-                <li><a href="../index.html">Página Inicial</a></li>
+                <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="pages/sobre.html">Sobre a clínica</a></li>
                 <li><a href="pages/atendimento.html">Horário de Atendimento</a></li>
                 <li><a href="pages/contato.html">Contato</a></li>
