--- a/Módulo2-Desafio1/index.html
+++ b/Módulo2-Desafio1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Pets</title>
-    <link rel="stylesheet" href="../Módulo2-Desafio1/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
