--- a/Módulo3-Desafio1/pages/gunztheduel.html
+++ b/Módulo3-Desafio1/pages/gunztheduel.html
@@ -124,7 +124,7 @@
         </div>
     </div>
     <div class="footer">
-        <li><a href="#inicio">Voltar ao topo</a></li>
+        <li><a href="#inicio" onclick="voltaraotopo()">Voltar ao topo</a></li>
     </div>
 </body>
 <script src="/assets/js/menuscroll.js"></script>
