--- a/Módulo3-Desafio1/index.html
+++ b/Módulo3-Desafio1/index.html
@@ -15,7 +15,7 @@
 
     <div>
         <div id="inicio" class="logo">
-            <img src="../assets/images/logo.png" width="200" alt="Logotipo WikiGames" />
+            <img src="assets/images/logo.png" width="200" alt="Logotipo WikiGames" />
             <h1><span>Wiki</span>Games</h1>
         </div>
     </div>
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="footer">
-        <li><a href="#inicio">Voltar ao topo</a></li>
+        <li><a href="#inicio" onclick="voltaraotopo()">Voltar ao topo</a></li>
     </div>
     </div>
 </body>
