--- a/Módulo3-Desafio1/index.html
+++ b/Módulo3-Desafio1/index.html
@@ -98,5 +98,5 @@
     </div>
     </div>
 </body>
-<script src="/assets/js/menuscroll.js"></script>
+<script src="assets/js/menuscroll.js"></script>
 </html>
