gunztheduel page logo fix

--- a/Módulo3-Desafio1/pages/gunztheduel.html
+++ b/Módulo3-Desafio1/pages/gunztheduel.html
@@ -15,7 +15,7 @@
 
     <div>
         <div id="inicio" class="logo">
-            <img src="../assets/images/logo.png" width="200" alt="Logotipo WikiGames" />
+            <img src="../images/logo.png" width="200" alt="Logotipo WikiGames" />
             <h1><span>Wiki</span>Games</h1>
         </div>
     </div>
