gunztheduel page logo fix

--- a/Módulo3-Desafio1/pages/gunztheduel.html
+++ b/Módulo3-Desafio1/pages/gunztheduel.html
@@ -15,7 +15,7 @@
 
     <div>
         <div id="inicio" class="logo">
-            <img src="../images/logo.png" width="200" alt="Logotipo WikiGames" />
+            <img src="../assets/images/logo.png" width="200" alt="Logotipo WikiGames" />
             <h1><span>Wiki</span>Games</h1>
         </div>
     </div>
@@ -35,7 +35,7 @@
             <h1 id="titulojogo" class="titulo">GunZ: The Duel</h1>
             <hr>
             <figure>
-                <img src="/assets/images/gunztheduellogo.png" alt="Logotipo do jogo escrito Gunz The Duel">
+                <img src="../assets/images/gunztheduellogo.png" alt="Logotipo do jogo escrito Gunz The Duel">
                 <figcaption>Logotipo do jogo Gunz The Duel</figcaption>
             </figure>
             <p><strong>GunZ: The Duel</strong> (em coreano: 건즈 온라인), conhecido como <strong>GunZ</strong> ou <strong>The
