--- a/Módulo3-Desafio1/pages/gunztheduel.html
+++ b/Módulo3-Desafio1/pages/gunztheduel.html
@@ -127,5 +127,5 @@
         <li><a href="#inicio" onclick="voltaraotopo()">Voltar ao topo</a></li>
     </div>
 </body>
-<script src="/assets/js/menuscroll.js"></script>
+<script src="assets/js/menuscroll.js"></script>
 </html>
