Website Wikipedia com Layout Moderno

--- a/Módulo3-Desafio1/pages/gunztheduel.html
+++ b/Módulo3-Desafio1/pages/gunztheduel.html
@@ -27,7 +27,7 @@
             <h2>Meus Jogos Favoritos:</h2>
             <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="#">GunZ: The Duel</a></li>
+                <li><a href="../pages/gunztheduel.html">GunZ: The Duel</a></li>
             </ul>
         </div>
 
